# Code-Quality

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: full-audit.yaml  security-scan.yaml
MarkDown files/: implementation_plan.md
api/: config.py  database.py  main.py
api/models/: scan.py
api/routers/: metrics.py  scans.py
api/schemas/: scan.py
api/services/: metrics_service.py  scan_service.py
api/static/: index.html
api/static/css/: styles.css
api/static/js/: app.js
config/: allowlist.yaml  pipeline.yaml  quality-gates.yaml  secret-patterns.yaml
config/language-profiles/: javascript.yaml  python.yaml
docker/: Dockerfile  Dockerfile.api  docker-compose.yaml
docs/: architecture.md  configuration.md  development.md  installation.md  troubleshooting.md
scripts/: docker-scan.sh  install.sh  run-scan.sh  seed_db.py  setup-hooks.sh
src/cqpipeline/: __init__.py  __main__.py  cli.py
src/cqpipeline/core/: __init__.py  baseline.py  config.py  constants.py  exceptions.py  models.py  orchestrator.py
src/cqpipeline/gates/: __init__.py  evaluator.py  policies.py
src/cqpipeline/git/: __init__.py  hooks.py  utils.py
src/cqpipeline/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  sarif_reporter.py  terminal_reporter.py
src/cqpipeline/scanners/: __init__.py  base.py  compiler_scanner.py  dependency_scanner.py  file_scanner.py  lint_scanner.py  quality_scanner.py  sast_scanner.py  secret_scanner.py  type_checker.py
src/cqpipeline/utils/: __init__.py  file_utils.py  logger.py  process.py
tests/: conftest.py
tests/test_core/: test_config.py
tests/test_gates/: __init__.py  test_evaluator.py
tests/test_reporters/: test_sarif_reporter.py
tests/test_scanners/: __init__.py  test_compiler_scanner.py  test_dependency_scanner.py  test_file_scanner.py  test_secret_scanner.py
