[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cq-pipeline"
version = "1.0.0"
description = "Enterprise DevSecOps Automated Pre-Commit Security & Code Quality Pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "DevSecOps Team"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "slowapi>=0.1.9",
]
scanners = [
    "bandit>=1.7.7",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pylint>=3.0.3",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "radon>=6.0.1",
    "pip-audit>=2.7.0",
    "safety>=3.0.0",
    "detect-secrets>=1.4.0",
]
scanners-linux = [
    # Semgrep requires Linux/macOS — use WSL on Windows
    "cq-pipeline[scanners]",
    "semgrep>=1.56.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
]
all = ["cq-pipeline[api,scanners,dev]"]

[project.scripts]
cq-pipeline = "cqpipeline.cli:cli"

[project.urls]
Homepage = "https://github.com/your-org/code-quality"
Documentation = "https://github.com/your-org/code-quality/docs"
Repository = "https://github.com/your-org/code-quality"

# ─── Tool Configurations ──────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
]
ignore = ["S603", "S607"]  # subprocess calls — handled by SAST scanner

[tool.ruff.lint.isort]
known-first-party = ["cqpipeline"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]  # missing docstrings (enforced separately)

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/cqpipeline"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
